@@ -38,6 +38,7 @@ XXX
    - Added Daemon Map.
    - Added option to configure OK response.
    - Minor fix to debian init script's option handling. Cameron Moore
+   - Make use of WITH_LDAP_SET_OPTION consistent. Thomas Hager
 
 ----------------------------------------------------------------------
 
